...
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/binvenio_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/binvenio_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/binvenio_title">

            <Button
                android:id="@+id/scan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> mainViewModel.onScan()}"
                android:text="@string/do_action_button_text" />

            <Button
...
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> mainViewModel.onFind()}"
                android:text="@string/find_button_text" />

            <Button
                android:id="@+id/add_item_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> mainViewModel.onAddItem()}"
                android:text="@string/add_binnable_button_text" />

            <Button
                android:id="@+id/add_container_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:onClick="@{() -> mainViewModel.onAddContainer()}"
                android:text="@string/add_container_button_text" />
        </LinearLayout>
...
