...
        android:id="@+id/add_item_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add_item.AddItemFragment">

        <Button
            android:id="@+id/add_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onAdd()}"
            android:text="@string/add_button_text"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toStartOf="@+id/cancel_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/cancel_button"
...
            android:labelFor="@id/name_edit"
            android:text="@string/name_label_text"
            app:layout_constraintBaseline_toBaselineOf="@+id/name_edit"
            app:layout_constraintEnd_toStartOf="@+id/name_edit" />

        <EditText
            android:id="@+id/count_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
...
